src-tauri/build_error_visita2.log
    Checking brisas-app v0.1.0 (C:\Users\femprobrisas\proyecto-brisas\Rust\brisas-app\src-tauri)
warning: unexpected `cfg` condition value: `logging`
   --> src\services\ingreso_visita_service.rs:126:19
    |
126 |             #[cfg(feature = "logging")]
    |                   ^^^^^^^^^^^^^^^^^^^
    |
    = note: expected values for `feature` are: `default`, `export`, `export-excel`, `export-pdf`, `rust_xlsxwriter`, `secret-service`, `ttf-parser`, `typst`, and `typst-pdf`
    = help: consider adding `logging` as a feature in `Cargo.toml`
    = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
    = note: `#[warn(unexpected_cfgs)]` on by default

error[E0277]: the trait bound `std::option::Option<bool>: From<std::option::Option<i64>>` is not satisfied
   --> src\db\visitante_queries.rs:95:15
    |
 95 |       let row = sqlx::query_as!(
    |  _______________^
 96 | |         VisitanteRow,
 97 | |         r#"
 98 | |         SELECT 
...   |
107 | |         cedula
108 | |     )
    | |_____^ the trait `From<std::option::Option<i64>>` is not implemented for `std::option::Option<bool>`
    |
    = help: the following other types implement trait `From<T>`:
              `std::option::Option<&T>` implements `From<&std::option::Option<T>>`
              `std::option::Option<&mut T>` implements `From<&mut std::option::Option<T>>`
              `std::option::Option<&tracing_core::metadata::Metadata<'_>>` implements `From<&tracing_core::span::Current>`
              `std::option::Option<&tracing_core::span::Id>` implements `From<&tracing::span::EnteredSpan>`
              `std::option::Option<&tracing_core::span::Id>` implements `From<&tracing::span::Span>`
              `std::option::Option<&tracing_core::span::Id>` implements `From<&tracing_core::span::Current>`
              `std::option::Option<BytesColumn>` implements `From<DynamicColumn>`
              `std::option::Option<Either<A, B>>` implements `From<itertools::either_or_both::EitherOrBoth<A, B>>`
            and 31 others
    = note: required for `std::option::Option<i64>` to implement `Into<std::option::Option<bool>>`
    = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sqlx::query_as` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::option::Option<bool>: From<std::option::Option<i64>>` is not satisfied
   --> src\db\visitante_queries.rs:116:15
    |
116 |       let row = sqlx::query_as!(
    |  _______________^
117 | |         VisitanteRow,
118 | |         r#"
119 | |         SELECT 
...   |
128 | |         id
129 | |     )
    | |_____^ the trait `From<std::option::Option<i64>>` is not implemented for `std::option::Option<bool>`
    |
    = help: the following other types implement trait `From<T>`:
              `std::option::Option<&T>` implements `From<&std::option::Option<T>>`
              `std::option::Option<&mut T>` implements `From<&mut std::option::Option<T>>`
              `std::option::Option<&tracing_core::metadata::Metadata<'_>>` implements `From<&tracing_core::span::Current>`
              `std::option::Option<&tracing_core::span::Id>` implements `From<&tracing::span::EnteredSpan>`
              `std::option::Option<&tracing_core::span::Id>` implements `From<&tracing::span::Span>`
              `std::option::Option<&tracing_core::span::Id>` implements `From<&tracing_core::span::Current>`
              `std::option::Option<BytesColumn>` implements `From<DynamicColumn>`
              `std::option::Option<Either<A, B>>` implements `From<itertools::either_or_both::EitherOrBoth<A, B>>`
            and 31 others
    = note: required for `std::option::Option<i64>` to implement `Into<std::option::Option<bool>>`
    = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sqlx::query_as` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::option::Option<bool>: From<std::option::Option<i64>>` is not satisfied
   --> src\db\visitante_queries.rs:138:16
    |
138 |       let rows = sqlx::query_as!(
    |  ________________^
139 | |         VisitanteRow,
140 | |         r#"
141 | |         SELECT 
...   |
153 | |         pattern
154 | |     )
    | |_____^ the trait `From<std::option::Option<i64>>` is not implemented for `std::option::Option<bool>`
    |
    = help: the following other types implement trait `From<T>`:
              `std::option::Option<&T>` implements `From<&std::option::Option<T>>`
              `std::option::Option<&mut T>` implements `From<&mut std::option::Option<T>>`
              `std::option::Option<&tracing_core::metadata::Metadata<'_>>` implements `From<&tracing_core::span::Current>`
              `std::option::Option<&tracing_core::span::Id>` implements `From<&tracing::span::EnteredSpan>`
              `std::option::Option<&tracing_core::span::Id>` implements `From<&tracing::span::Span>`
              `std::option::Option<&tracing_core::span::Id>` implements `From<&tracing_core::span::Current>`
              `std::option::Option<BytesColumn>` implements `From<DynamicColumn>`
              `std::option::Option<Either<A, B>>` implements `From<itertools::either_or_both::EitherOrBoth<A, B>>`
            and 31 others
    = note: required for `std::option::Option<i64>` to implement `Into<std::option::Option<bool>>`
    = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sqlx::query_as` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
warning: `brisas-app` (lib) generated 1 warning
error: could not compile `brisas-app` (lib) due to 3 previous errors; 1 warning emitted
